# attendance-system-using-computer-vision

./: .gitignore  README.md  admin.py  main.py  pyproject.toml  requirements.txt
config/: config.py
data/students/: students_data.json
firebase/: database.py
utils/: encodings.py
