[tool.poetry]
name = "attendance-system-using-computer-vision"
version = "0.1.0"
description = ""
authors = ["RamanjitSifars <ramanjit.singh@sifars.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cmake = "3.25.2"
dlib = "19.24.2"
face-recognition = "^1.3.0"
numpy = "^2.0.1"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
